--- a/package.json
+++ b/package.json
@@ -1,37 +1,50 @@
 {
- "name": "onlyprogrammers",
- "version": "0.1.0",
- "private": true,
- "scripts": {
-  "build": "next build",
-  "db:migrate": "drizzle-kit generate && bun ./src/db/migrate.ts",
-  "db:push": "drizzle-kit push",
-  "dev": "next dev",
-  "lint": "next lint",
-  "start": "next start"
- },
- "dependencies": {
-  "@auth/drizzle-adapter": "^1.1.0",
-  "@libsql/client": "^0.6.0",
-  "@paralleldrive/cuid2": "^2.2.2",
-  "drizzle-orm": "^0.30.10",
-  "next": "14.2.3",
-  "next-auth": "^5.0.0-beta.18",
-  "react": "^18",
-  "react-dom": "^18"
- },
- "devDependencies": {
-  "@types/node": "^20",
-  "@types/react": "^18",
-  "@types/react-dom": "^18",
-  "autoprefixer": "^10.0.1",
-  "drizzle-kit": "^0.21.1",
-  "eslint": "9.2.0",
-  "eslint-config-next": "14.1.4",
-  "postcss": "^8",
-  "prettier-plugin-pkg": "^0.18.1",
-  "prettier-plugin-tailwindcss": "^0.5.14",
-  "tailwindcss": "^3.3.0",
-  "typescript": "^5"
- }
+  "name": "onlyprogrammers",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "build": "next build",
+    "dev": "next dev",
+    "lint": "next lint",
+    "start": "next start"
+  },
+  "dependencies": {
+    "@auth/drizzle-adapter": "^1.1.0",
+    "@hookform/resolvers": "^3.3.4",
+    "@libsql/client": "^0.6.0",
+    "@paralleldrive/cuid2": "^2.2.2",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@tailwindcss/typography": "^0.5.13",
+    "@tanstack/react-table": "^8.16.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "drizzle-orm": "^0.30.10",
+    "lucide-react": "^0.378.0",
+    "marked": "^12.0.2",
+    "next": "14.2.3",
+    "next-auth": "^5.0.0-beta.18",
+    "react": "^18",
+    "react-dom": "^18",
+    "react-hook-form": "^7.51.4",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
+    "drizzle-kit": "^0.21.1",
+    "eslint": "9.2.0",
+    "eslint-config-next": "14.1.4",
+    "postcss": "^8",
+    "prettier-plugin-pkg": "^0.18.1",
+    "prettier-plugin-tailwindcss": "^0.5.14",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
+  }
 }
