--- a/package.json
+++ b/package.json
@@ -9,47 +9,51 @@
     "start": "next start"
   },
   "dependencies": {
-    "@auth/drizzle-adapter": "^1.1.0",
-    "@hookform/resolvers": "^3.3.4",
-    "@libsql/client": "^0.6.0",
+    "@auth/drizzle-adapter": "^1.7.4",
+    "@hookform/resolvers": "^3.9.1",
+    "@libsql/client": "^0.14.0",
     "@paralleldrive/cuid2": "^2.2.2",
-    "@radix-ui/react-alert-dialog": "^1.0.5",
-    "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-checkbox": "^1.0.4",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@tailwindcss/typography": "^0.5.13",
-    "@tanstack/react-table": "^8.17.0",
-    "class-variance-authority": "^0.7.0",
-    "cloudinary": "^2.2.0",
+    "@radix-ui/react-alert-dialog": "^1.1.2",
+    "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-checkbox": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@tailwindcss/typography": "^0.5.15",
+    "@tanstack/react-table": "^8.20.5",
+    "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
-    "drizzle-orm": "^0.30.10",
-    "lucide-react": "^0.378.0",
-    "marked": "^12.0.2",
-    "next": "14.2.3",
-    "next-auth": "^5.0.0-beta.18",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hook-form": "^7.51.4",
-    "sonner": "^1.4.41",
-    "tailwind-merge": "^2.3.0",
+    "drizzle-orm": "^0.37.0",
+    "lucide-react": "^0.466.0",
+    "marked": "^15.0.3",
+    "next": "15.0.3",
+    "next-auth": "^4.24.10",
+    "react": "^19.0.0-rc.1",
+    "react-dom": "^19.0.0-rc.1",
+    "react-hook-form": "^7.53.2",
+    "sonner": "^1.7.0",
+    "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "drizzle-kit": "^0.21.1",
-    "eslint": "9.2.0",
-    "eslint-config-next": "14.1.4",
-    "postcss": "^8",
+    "@types/node": "^22.10.1",
+    "@types/react": "npm:types-react@rc",
+    "@types/react-dom": "npm:types-react-dom@rc",
+    "autoprefixer": "^10.4.20",
+    "drizzle-kit": "^0.29.1",
+    "eslint": "9.16.0",
+    "eslint-config-next": "^15.0.3",
+    "postcss": "^8.4.49",
     "prettier-plugin-pkg": "^0.18.1",
-    "prettier-plugin-tailwindcss": "^0.5.14",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "prettier-plugin-tailwindcss": "^0.6.9",
+    "tailwindcss": "^3.4.16",
+    "typescript": "^5.7.2"
+  },
+  "overrides": {
+    "@types/react": "npm:types-react@rc",
+    "@types/react-dom": "npm:types-react-dom@rc"
   }
 }
