--- a/package.json
+++ b/package.json
@@ -39,17 +39,17 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.0-beta.5",
     "@types/node": "^22.10.1",
     "@types/react": "npm:types-react@rc",
     "@types/react-dom": "npm:types-react-dom@rc",
-    "autoprefixer": "^10.4.20",
     "drizzle-kit": "^0.29.1",
     "eslint": "9.16.0",
     "eslint-config-next": "^15.0.3",
     "postcss": "^8.4.49",
     "prettier-plugin-pkg": "^0.18.1",
     "prettier-plugin-tailwindcss": "^0.6.9",
-    "tailwindcss": "^3.4.16",
+    "tailwindcss": "^4.0.0-beta.5",
     "typescript": "^5.7.2"
   },
   "overrides": {
